fixed overflow styles

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2515,6 +2515,7 @@
   }
   body {
     overflow-x: hidden;
+    position: relative;
   }
   @media (max-width: 1024px) {
     h1 {
